--- a/LadyBird_Foundation/app/src/main/res/layout/admin_password.xml
+++ b/LadyBird_Foundation/app/src/main/res/layout/admin_password.xml
@@ -8,8 +8,8 @@
     android:padding="16dp">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="346dp"
-        android:layout_height="191dp"
+        android:layout_width="333dp"
+        android:layout_height="200dp"
         android:layout_margin="16dp"
         android:padding="16dp"
         app:cardCornerRadius="16dp"
@@ -23,50 +23,52 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:padding="16dp">
-
-
-            <Button
-                android:id="@+id/admin_add_events_uploadIV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="#932020"
-                android:text="Enter Password"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.497"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/adminPassword"
-                app:layout_constraintVertical_bias="0.918" />
 
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-black"
+                android:fontFamily="sans-serif-medium"
                 android:text="@string/admin_dashboard_password"
-                android:textSize="20dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:textSize="18sp"
+
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.036" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
                 android:id="@+id/adminPassword"
-                android:layout_width="251dp"
-                android:layout_height="45dp"
+                android:layout_width="0dp"
+                android:layout_height="48dp"
+                android:layout_marginTop="16dp"
                 android:ems="10"
-                android:hint="Password"
+                android:hint="Enter Password"
                 android:inputType="textPassword"
-                app:layout_constraintBottom_toBottomOf="parent"
+
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.468"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView4"
-                app:layout_constraintVertical_bias="0.153" />
+                app:layout_constraintWidth_percent="0.85" />
+
+            <Button
+                android:id="@+id/admin_add_events_uploadIV"
+                android:layout_width="0dp"
+                android:layout_height="48dp"
+                android:layout_marginTop="24dp"
+                android:backgroundTint="#932020"
+                android:text="Submit"
+                android:textColor="@android:color/white"
+                android:textStyle="bold"
+                app:cornerRadius="12dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/adminPassword"
+                app:layout_constraintWidth_percent="0.85" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
