--- a/LadyBird_Foundation/app/src/main/res/layout/activity_admin_location.xml
+++ b/LadyBird_Foundation/app/src/main/res/layout/activity_admin_location.xml
@@ -27,6 +27,7 @@
                 android:layout_height="50dp"
                 android:backgroundTint="#932020"
                 android:text="Save"
+                android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.472"
