--- a/LadyBird_Foundation/app/src/main/res/layout/activity_adminaboutus.xml
+++ b/LadyBird_Foundation/app/src/main/res/layout/activity_adminaboutus.xml
@@ -62,6 +62,7 @@
                 android:layout_marginTop="16dp"
                 android:backgroundTint="#932020"
                 android:text="Update About Us"
+                android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
