--- a/LadyBird_Foundation/app/src/main/res/layout/activity_donate.xml
+++ b/LadyBird_Foundation/app/src/main/res/layout/activity_donate.xml
@@ -132,6 +132,7 @@
         android:layout_height="50dp"
         android:backgroundTint="#932020"
         android:text="View Banking Details"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/donate_divider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.531"
@@ -227,6 +228,7 @@
         android:layout_marginBottom="20dp"
         android:backgroundTint="#932020"
         android:text="Send Donation Email"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/donate_divider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.482"
