--- a/LadyBird_Foundation/app/src/main/res/layout/activity_home.xml
+++ b/LadyBird_Foundation/app/src/main/res/layout/activity_home.xml
@@ -31,6 +31,9 @@
         android:text="@string/raising_funds_and_donating_to_others_who_are_in_need_this_will_have_all_the_information_about_our_website_and_what_we_are_after_right_now_just_filling_in_the_void"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.831"
@@ -43,6 +46,9 @@
         android:gravity="center"
         android:text="@string/the_ladybird_foundation_was_set_up_to_provide_joy_and_relief_to_terminally_critically_or_seriously_ill_children_based_in_the_maltese_islands_funds_collected_will_be_used_to_give_these_children_and_their_families_the_opportunity_sometimes_the_last_opportunity_to_go_on_vacation_together_or_otherwise_spend_quality_time_with_each_other_we_will_try_to_give_children_the_chance_to_turn_their_dreams_into_reality"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toStartOf="parent"
