--- a/LadyBird_Foundation/app/src/main/res/layout/admindeleteevents.xml
+++ b/LadyBird_Foundation/app/src/main/res/layout/admindeleteevents.xml
@@ -43,6 +43,7 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="#932020"
                 android:text="Delete event"
+                android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.502"
